fixed logo covered on scroll

--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -59,6 +59,7 @@
   letter-spacing: .5px;
   padding-left: 36px;
   margin-top: 3px;
+  margin-bottom: 2px;
   text-transform: uppercase;
 }
 
